<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:weightSum="1">

    <TextView
        android:text="@string/Submit_Water_Source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/source_submit_textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <!-- Location Label -->
            <TextView
                android:id="@+id/source_location_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Latitude Input -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

                <AutoCompleteTextView
                    android:id="@+id/source_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Latitute"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <!-- Longitude Input -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp">

                <AutoCompleteTextView
                    android:id="@+id/source_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Enter_Longitude"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!-- Type Label -->
            <TextView
                android:id="@+id/type_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Type_Water"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Type Spinner -->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/type_spinner" />

            <!-- Condition Label -->
            <TextView
                android:id="@+id/condition_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cond_Water"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Condition Spinner -->
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/condition_spinner" />

            <!-- Submit Button -->
            <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_submit_source_report"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:gravity="center"
            android:text="@string/Submit"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>